--- a/Private/Modules/GFStarterKit/Public/css/login.css
+++ b/Private/Modules/GFStarterKit/Public/css/login.css
@@ -22,6 +22,7 @@
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0;
+          height: 220px;
 }
 
 .demo-main {
@@ -29,6 +30,11 @@
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0;
+          position: absolute;
+    top: 100px;
+    width: 100%;
+    flex-shrink: 0;
+    margin: 0px;
 }
 
 .demo-header .mdl-layout__header-row {
@@ -67,4 +73,9 @@
 }
 .mdl-card {
 	margin: auto;
+    width: inherit;
+    max-width: 330px;
+}
+.mdl-button.mdl-button--colored {
+    float: right;
 }
