--- a/Private/Modules/GFStarterKit/Public/css/styles.css
+++ b/Private/Modules/GFStarterKit/Public/css/styles.css
@@ -141,12 +141,7 @@ _:-ms-input-placeholder,:root .demo-graph {
 	font-size: 1em;
 }
 
-.demo-updates .mdl-card__title {
-	min-height: 200px;
-	background-image: url('images/dog.png');
-	background-position: 90% 100%;
-	background-repeat: no-repeat;
-}
+
 
 .demo-cards .mdl-card__actions a {
 	color: #00BCD4;
@@ -216,7 +211,7 @@ _:-ms-input-placeholder,:root .demo-graph {
 }
 
 .fullwidth {
-	width: 100% !important;
+	width: 100%;
 }
 
 .mdl-select {
@@ -502,9 +497,6 @@ table.no-borders,table.no-borders td,table.no-borders tr {
 .mdl-data-table tbody tr {
 }
 
-.mdl-grid {
-	width: 100%;
-}
 .tooltip {
   position: absolute;
   z-index: 1070;
@@ -638,4 +630,8 @@ a.btn {
 .image-centered {
 	display: block;
 	margin: auto;
+}
+.mdl-data-table td {
+	text-align: left;
+	padding: 0 0 0 18px;
 }
