--- a/Modules/GFFileManager/Public/css/styles-filemanager.css
+++ b/Modules/GFFileManager/Public/css/styles-filemanager.css
@@ -30,7 +30,7 @@
 	width: 95%;
 	max-width:1340px;
 	position: relative;
-	margin: 100px auto 50px;
+	margin: 30px auto 30px;
 }
 
 @media all and (max-width: 965px) {
@@ -47,7 +47,7 @@
 
 
 .filemanager .breadcrumbs {
-	color: #ffffff;
+	color: #757575;
 	margin-left:20px;
 	font-size: 24px;
 	font-weight: 700;
@@ -55,7 +55,7 @@
 }
 
 .filemanager .breadcrumbs a:link, .breadcrumbs a:visited {
-	color: #ffffff;
+	color: #757575;
 	text-decoration: none;
 }
 
@@ -82,7 +82,7 @@
 	cursor: pointer;
 	right: 0;
 	font-size: 17px;
-	color: #ffffff;
+	color: #757575;
 	display: block;
 	width: 40px;
 	height: 40px;
@@ -150,7 +150,7 @@
 
 .filemanager .data li {
 	border-radius: 3px;
-	background-color: #373743;
+	/*background-color: #373743;*/
 	width: 307px;
 	height: 118px;
 	list-style-type: none;
@@ -166,7 +166,7 @@
 }
 
 .filemanager .data li:hover {
-	background-color: #42424E;
+	background-color: rgba(158, 158, 158, .1);
 
 }
 
@@ -179,7 +179,7 @@
 }
 
 .filemanager .data li .name {
-	color: #ffffff;
+	color: #757575;
 	font-size: 15px;
 	font-weight: 700;
 	line-height: 20px;
