--- a/Public/assets/css/material-dashboard.css
+++ b/Public/assets/css/material-dashboard.css
@@ -1515,10 +1515,10 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
 }
 
 a {
-  color: #9c27b0;
+  color: #fff;
 }
 a:hover, a:focus {
-  color: #89229b;
+  color: #fff;
   text-decoration: none;
 }
 a.text-info:hover, a.text-info:focus {
