--- a/Public/assets/css/material-dashboard.css
+++ b/Public/assets/css/material-dashboard.css
@@ -834,7 +834,7 @@ h2.title {
 .navbar .navbar-nav > li > a.btn.btn-primary.dropdown-toggle, .open >
 .navbar .navbar-nav > li > a.btn.btn-primary.dropdown-toggle:focus, .open >
 .navbar .navbar-nav > li > a.btn.btn-primary.dropdown-toggle:hover {
-  background-color: #0b8884;
+  background-color: #009bdb;
   color: #FFFFFF;
 }
 .btn.btn-primary:focus, .btn.btn-primary:active, .btn.btn-primary:hover,
@@ -5295,7 +5295,7 @@ footer .btn {
     margin: auto;
 }
 .header-card-color {
-	background-color: #32c7c7;
+	background-color: #009bdb;
 }
 .black {
 	color: #222222;
